add some things on the projects

--- a/server/message.html
+++ b/server/message.html
@@ -6,17 +6,15 @@
 		<STYLE>
 			p{
 			   font-size:14pt;
-			   font-family:courier, courier new, serif;
+			   font-family: "Helvetica Neue", sans-serif;
 			}
 		</STYLE>
 	</head>
 
 	<body>
-		<h1>Benvenuto nel sistema Rilievi e Perizie.</h1>            
-		<p style="font-size:14pt; font-family:courier, 'courier new', serif;">	
-			Il tuo nome utente è: <b> __user </b> e la tua password è: <b> __password </b> <br>
-		    Da questo link è possibile scaricare l'applicazione mobile: <b> robertomana.it </b><br>
-			In alternativa, puoi scansionare il QR CODE contenuto nel file allegato.
+		<h1>Sistema Rilievi e Perizie.</h1>            
+		<p style="font-size:14pt;">	
+			Queste sono le tue credenziali: Il tuo username è: <b> __user </b> e la tua password è: <b> __password </b> <br>
 		</p>	
 	</body>
 </html>
